[package]
name = "cprint"
description = "Cargo-like print"
version = "0.5.3"
edition = "2021"
authors = ["Gilles Meunier <sellig6792@gmail.com>"]
homepage = "https://github.com/Sellig6792/cprint"
repository = "https://github.com/Sellig6792/cprint"
documentation = "https://docs.rs/cprint"
readme = "README.md"
license = "MIT"

[lib]
name = "cprint"
path = "src/lib.rs"

[features]
default = ["cprint"]
coloration = []
cformat = ["coloration"]
cprint = ["coloration", "cformat"]
ceprint = ["coloration"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
colored = "2.0.0"
